--- a/src/components/Contact/styles.module.scss
+++ b/src/components/Contact/styles.module.scss
@@ -17,9 +17,12 @@
   border-radius: 50%;
   background-color: #777;
   margin-left: 1rem;
+  &:hover {
+    opacity: 1;
+  }
 }
 .user_info {
-  color: #333;
+  color: #f4f4f4;
   font-size: 1.5rem;
 }
 
